@@ -23,6 +23,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3205] fixed incorrect event duration count (Aly)
  - [ZBX-3021] fixed possibility to create dependency between host and template triggers (Vedmak)
  - [ZBX-3183] fixed maintenenace permisson issue (KB)
  - [ZBX-3183] added screenname GET parameter support to screens.php (KB)
